# g060525-e-pt

./: .gitignore  CONTRIBUTORS.md  Docs.md  Extra_task_from_Kirill.py  Makefile  README.md  pyproject.toml  test_module.py
.github/scripts/: code_review.py  get_presentation_metadata.py  get_presentation_toc.py  process_presentations.py  update_progress.py
.github/scripts/bash/: common.sh  config.sh  logger.sh  process_presentations.sh
.github/workflows/: code-review.yml  update-progress.yml  update-readme.yml
Projects/: readme.md
module1/lesson1/: test.txt
Модуль 0. Вводный/Урок 2. Алгоритмы в программировани/: Урок 2. Алгоритмы в программировании.pptx
Модуль 1. Introduction/Урок 1. Знакомство, введение/: .~lock.1. Вводный урок.docx#  1. Вводный урок.docx  Урок 1_.pptx
Модуль 1. Introduction/Урок 2. Основы работы в Terminal и PyCharm/: test.sh
Модуль 1. Introduction/Урок 5. Pull requests/: .~lock.Урок 5. Pull requests и дебаг кода.pptx#
Модуль 2. Core Python/Урок 1. Данные и переменные/: .~lock.Урок 1. Данные и переменные.pptx#  cw_data_veriables_ex1.py  cw_data_veriables_ex2.py  cw_data_veriables_ex3.py  cw_exercise_1.py  examples.py  exercise_1.py  exercise_2.py  exercise_3.py  homework.py  hw_data_veriables_m2_l1.py  live-coding.py
Модуль 2. Core Python/Урок 10. Рекурсия/: exercise_1.py  exercise_2.py  exercise_3.py  homework.py  live-coding.py  Урок 10. Рекурсия.pptx
Модуль 2. Core Python/Урок 11. Декораторы/: exercise_1.py  exercise_2.py  exercise_3.py  homework.py  live-coding.py  Урок 11. Декораторы.pptx
Модуль 2. Core Python/Урок 12.  Модули и пакеты. Библиотеки Random и Math/: .~lock.Урок 12. Модули и пакеты. Модули Random и Math.pptx#  examples.py  exercise_1.py  exercise_2.py  exercise_3.py  live-coding.py  main.py  math_operations.py  Урок 12. Модули и пакеты. Модули Random и Math.pptx
Модуль 2. Core Python/Урок 12.  Модули и пакеты. Библиотеки Random и Math/new_modul/: main.py  math_operations.py  name_modul.py
Модуль 2. Core Python/Урок 13. Проектный урок/: guess_number.py  hangman.py  main.py  minesweeper.py  rock_paper_scissors.py  text_adventure.py  victoryna.py  Урок 13. Проектный урок.pptx
Модуль 2. Core Python/Урок 14. Работа с файлами/: .~lock.Урок 14. Работа с файлами.pptx#  data.json  exercise_1.py  exercise_2.py  exercise_3.py  inventory.json  live-coding.py  output.txt  user.json  Урок 14. Работа с файлами.pptx
Модуль 2. Core Python/Урок 15. Обработка ошибок/: exercise_1.py  live-coding.py
Модуль 2. Core Python/Урок 16. Генераторы/: exercise_1.py  exercise_2.py  large_file.txt  live-coding.py  Урок 16. Генераторы.pptx
Модуль 2. Core Python/Урок 2. Строки/: .~lock.Урок 2. Строки.pptx#  cw_strings_ex_1.py  cw_strings_ex_2.py  cw_strings_ex_3.py  exercise_1.py  exercise_2.py  exercise_3.py  homework.py  hw_strings_m2_l2.py  live-coding.py  test1.py  Урок 2. Строки.pptx
Модуль 2. Core Python/Урок 3. Условия/: exercise_1.py  exercise_2.py  exercise_3.py  homework.py  hw calc.py  live-coding.py  Урок 3. Условия.pptx
Модуль 2. Core Python/Урок 4. Списки/: .~lock.Урок 4. Списки.pptx#  exercise_1.py  exercise_2.py  exercise_3.py  homework.py  live-coding.py  Урок 4. Списки.pptx
Модуль 2. Core Python/Урок 5. Циклы/: .~lock.Урок 5. Циклы.pptx#  exercise_1.py  exercise_2.py  exercise_3.py  homework.py  live-coding.py  Урок 5. Циклы.pptx
Модуль 2. Core Python/Урок 6. Итераторы и генераторы/: exercise_1.py  exercise_2.py  exercise_3.py  homework.py  live-coding.py  Урок 6. Итераторы и генераторы списков.pptx
Модуль 2. Core Python/Урок 7. Словари, кортежи, множества/: exercise_1.py  exercise_2.py  exercise_3.py  homework.py  live-coding.py  Урок 7. Словари, кортежи, множества.pptx
Модуль 2. Core Python/Урок 8. Функции/: exercise_1.py  exercise_2.py  exercise_3.py  homework.py  live-coding.py  Урок 8. Функции.pptx
Модуль 2. Core Python/Урок 9. Args, kwargs. Замыкание/: exercise_1.py  exercise_2.py  exercise_3.py  homework.py  live-coding.py  Урок 9. Замыкания функций.pptx
Модуль 2. Основы Python/01/: homework1.py
